--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "0.1.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "start": "node server/index.js",
+    "dev": "nodemon server/index.js",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
@@ -12,8 +13,9 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^4.6.0",
-    "axios": "^1.6.2",
-    "express": "^4.18.2",
+    "axios": "^1.9.0",
+    "dotenv": "^16.5.0",
+    "express": "^4.21.2",
     "framer-motion": "^10.16.4",
     "jotai": "^2.12.5",
     "lucide-react": "^0.344.0",
@@ -22,7 +24,7 @@
     "react-router-dom": "^6.20.0",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
-    "uuid": "^9.0.1"
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
